src/pymergetic/wasmmod/registry/__exports__.h

/* DO NOT EDIT — generated by `pymergetic.util.gen` (live registry introspection).
 * Source of truth: pm_wasmmod_registry_* after PM_MOD_EXPORT_* / PM_MOD_EXPORT_RS! registration.
 */
#ifndef PYMERGETIC_WASMMOD_REGISTRY_EXPORT_H
#define PYMERGETIC_WASMMOD_REGISTRY_EXPORT_H

#include <stddef.h>
#include <stdint.h>

#include "pymergetic/wasmmod/registry/__types__.h"

#ifdef __cplusplus
extern "C" {
#endif

int32_t pm_wasmmod_registry_has(const uint8_t *, uint32_t);

pm_wasmmod_registry_handle_t pm_wasmmod_registry_ensure(const uint8_t *, uint32_t, pm_wasmmod_registry_container_kind_t);

int32_t pm_wasmmod_registry_export_at(const uint8_t *, uint32_t, uint32_t, uint8_t *, uint32_t *, pm_wasmmod_registry_export_kind_t *, uint8_t *, uint32_t *);

int32_t pm_wasmmod_registry_version(const uint8_t *, uint32_t, uint8_t *, uint32_t *);

void pm_wasmmod_registry_set_wasm_test_runner(pm_wasmmod_registry_wasm_test_runner_t);

int32_t pm_wasmmod_registry_call(const uint8_t *, uint32_t, const uint8_t *, uint32_t, const pm_wasmmod_registry_value_t *, uint32_t, pm_wasmmod_registry_value_t *, uint32_t);

void pm_wasmmod_registry_init(void);

uint32_t pm_wasmmod_registry_export_count(const uint8_t *, uint32_t);

int32_t pm_wasmmod_registry_module_at(uint32_t, uint8_t *, uint32_t *);

int32_t pm_wasmmod_registry_test_register_wasm(const uint8_t *, uint32_t, const uint8_t *, uint32_t, const uint8_t *, uint32_t);

int32_t pm_wasmmod_registry_export_set(pm_wasmmod_registry_handle_t, const uint8_t *, uint32_t, pm_wasmmod_registry_export_kind_t, void *);

pm_wasmmod_registry_handle_t pm_wasmmod_registry_publish_ver(const uint8_t *, uint32_t, pm_wasmmod_registry_container_kind_t, const uint8_t *, uint32_t);

void * pm_wasmmod_registry_resolve_native(const uint8_t *, uint32_t, const uint8_t *, uint32_t);

uint32_t pm_wasmmod_registry_test_count(const uint8_t *, uint32_t);

int32_t pm_wasmmod_registry_container(const uint8_t *, uint32_t);

int32_t pm_wasmmod_registry_test_register(const uint8_t *, uint32_t, const uint8_t *, uint32_t, pm_wasmmod_registry_test_fn_t);

int32_t pm_wasmmod_registry_unpublish(pm_wasmmod_registry_handle_t);

int32_t pm_wasmmod_registry_mod_export(const uint8_t *, uint32_t, const uint8_t *, uint32_t, pm_wasmmod_registry_export_kind_t, void *, const uint8_t *, uint32_t);

int32_t pm_wasmmod_registry_test_run_all(const uint8_t *, uint32_t);

int32_t pm_wasmmod_registry_set_version(const uint8_t *, uint32_t, const uint8_t *, uint32_t);

int32_t pm_wasmmod_registry_test_run(const uint8_t *, uint32_t, const uint8_t *, uint32_t);

int32_t pm_wasmmod_registry_export_set_sig(pm_wasmmod_registry_handle_t, const uint8_t *, uint32_t, pm_wasmmod_registry_export_kind_t, void *, const uint8_t *, uint32_t);

uint32_t pm_wasmmod_registry_module_count(void);

int32_t pm_wasmmod_registry_test_at(const uint8_t *, uint32_t, uint32_t, uint8_t *, uint32_t *);

void pm_wasmmod_registry_gc_visit(void (*)(void *, void *), void *);

int32_t pm_wasmmod_registry_connect_import(const uint8_t *, uint32_t, const uint8_t *, uint32_t, void **);

pm_wasmmod_registry_handle_t pm_wasmmod_registry_publish(const uint8_t *, uint32_t, pm_wasmmod_registry_container_kind_t);

#ifdef __cplusplus
}
#endif

#endif /* PYMERGETIC_WASMMOD_REGISTRY_EXPORT_H */