src/pymergetic/wasmmod/registry/__exports__.rs

//! DO NOT EDIT — generated by `pymergetic.util.gen` (live registry introspection).

#![allow(non_camel_case_types)]

use core::ffi::c_void;

#[repr(C)]
pub struct pm_wasmmod_registry_export_kind_t {
    _opaque: [u8; 0],
}

#[repr(C)]
pub struct pm_wasmmod_registry_value_t {
    _opaque: [u8; 0],
}

#[repr(C)]
pub struct void * {
    _opaque: [u8; 0],
}

unsafe extern "C" {
    pub fn pm_wasmmod_registry_has(a0: *const u8, a1: u32) -> i32;
    pub fn pm_wasmmod_registry_ensure(a0: *const u8, a1: u32, a2: pm_wasmmod_registry_container_kind_t) -> pm_wasmmod_registry_handle_t;
    pub fn pm_wasmmod_registry_export_at(a0: *const u8, a1: u32, a2: u32, a3: *mut u8, a4: *mut u32, a5: *mut pm_wasmmod_registry_export_kind_t, a6: *mut u8, a7: *mut u32) -> i32;
    pub fn pm_wasmmod_registry_version(a0: *const u8, a1: u32, a2: *mut u8, a3: *mut u32) -> i32;
    pub fn pm_wasmmod_registry_set_wasm_test_runner(a0: pm_wasmmod_registry_wasm_test_runner_t);
    pub fn pm_wasmmod_registry_call(a0: *const u8, a1: u32, a2: *const u8, a3: u32, a4: *const pm_wasmmod_registry_value_t, a5: u32, a6: *mut pm_wasmmod_registry_value_t, a7: u32) -> i32;
    pub fn pm_wasmmod_registry_init();
    pub fn pm_wasmmod_registry_export_count(a0: *const u8, a1: u32) -> u32;
    pub fn pm_wasmmod_registry_module_at(a0: u32, a1: *mut u8, a2: *mut u32) -> i32;
    pub fn pm_wasmmod_registry_test_register_wasm(a0: *const u8, a1: u32, a2: *const u8, a3: u32, a4: *const u8, a5: u32) -> i32;
    pub fn pm_wasmmod_registry_export_set(a0: pm_wasmmod_registry_handle_t, a1: *const u8, a2: u32, a3: pm_wasmmod_registry_export_kind_t, a4: *mut c_void) -> i32;
    pub fn pm_wasmmod_registry_publish_ver(a0: *const u8, a1: u32, a2: pm_wasmmod_registry_container_kind_t, a3: *const u8, a4: u32) -> pm_wasmmod_registry_handle_t;
    pub fn pm_wasmmod_registry_resolve_native(a0: *const u8, a1: u32, a2: *const u8, a3: u32) -> *mut c_void;
    pub fn pm_wasmmod_registry_test_count(a0: *const u8, a1: u32) -> u32;
    pub fn pm_wasmmod_registry_container(a0: *const u8, a1: u32) -> i32;
    pub fn pm_wasmmod_registry_test_register(a0: *const u8, a1: u32, a2: *const u8, a3: u32, a4: pm_wasmmod_registry_test_fn_t) -> i32;
    pub fn pm_wasmmod_registry_unpublish(a0: pm_wasmmod_registry_handle_t) -> i32;
    pub fn pm_wasmmod_registry_mod_export(a0: *const u8, a1: u32, a2: *const u8, a3: u32, a4: pm_wasmmod_registry_export_kind_t, a5: *mut c_void, a6: *const u8, a7: u32) -> i32;
    pub fn pm_wasmmod_registry_test_run_all(a0: *const u8, a1: u32) -> i32;
    pub fn pm_wasmmod_registry_set_version(a0: *const u8, a1: u32, a2: *const u8, a3: u32) -> i32;
    pub fn pm_wasmmod_registry_test_run(a0: *const u8, a1: u32, a2: *const u8, a3: u32) -> i32;
    pub fn pm_wasmmod_registry_export_set_sig(a0: pm_wasmmod_registry_handle_t, a1: *const u8, a2: u32, a3: pm_wasmmod_registry_export_kind_t, a4: *mut c_void, a5: *const u8, a6: u32) -> i32;
    pub fn pm_wasmmod_registry_module_count() -> u32;
    pub fn pm_wasmmod_registry_test_at(a0: *const u8, a1: u32, a2: u32, a3: *mut u8, a4: *mut u32) -> i32;
    pub fn pm_wasmmod_registry_gc_visit(a0: *mut c_void, a1: *mut c_void);
    pub fn pm_wasmmod_registry_connect_import(a0: *const u8, a1: u32, a2: *const u8, a3: u32, a4: *mut void *) -> i32;
    pub fn pm_wasmmod_registry_publish(a0: *const u8, a1: u32, a2: pm_wasmmod_registry_container_kind_t) -> pm_wasmmod_registry_handle_t;
}
